[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/medievalTile_002.png" type="Texture" id=1]
[ext_resource path="res://Character/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/00 Unknown Track.ogg" type="AudioStream" id=3]
[ext_resource path="res://World/World.gd" type="Script" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
0/name = "medievalTile_002.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_quadrant_size = 64
collision_mask = 6
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 131071, 0, 0, 65536, 0, 0, 65555, 0, 0, 65556, 0, 0, 196607, 0, 0, 131072, 0, 0, 131091, 0, 0, 131092, 0, 0, 262143, 0, 0, 196608, 0, 0, 196627, 0, 0, 196628, 0, 0, 327679, 0, 0, 262144, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262163, 0, 0, 262164, 0, 0, 393215, 0, 0, 327680, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327699, 0, 0, 327700, 0, 0, 458751, 0, 0, 393216, 0, 0, 393235, 0, 0, 393236, 0, 0, 524287, 0, 0, 458752, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458771, 0, 0, 458772, 0, 0, 589823, 0, 0, 524288, 0, 0, 524307, 0, 0, 524308, 0, 0, 655359, 0, 0, 589824, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589843, 0, 0, 589844, 0, 0, 720895, 0, 0, 655360, 0, 0, 655379, 0, 0, 655380, 0, 0, 786431, 0, 0, 720896, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720915, 0, 0, 720916, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 627.016, 328.651 )
z_index = 100

[node name="Spawner" type="Position2D" parent="."]
position = Vector2( 256, 232 )

[node name="Spawner2" type="Position2D" parent="."]
position = Vector2( 384, 232 )

[node name="Spawner3" type="Position2D" parent="."]
position = Vector2( 832, 296 )

[node name="Spawner4" type="Position2D" parent="."]
position = Vector2( 960, 296 )

[node name="Spawner5" type="Position2D" parent="."]
position = Vector2( 704, 424 )

[node name="Spawner6" type="Position2D" parent="."]
position = Vector2( 576, 424 )

[node name="Spawner7" type="Position2D" parent="."]
position = Vector2( 576, 424 )

[node name="Spawner8" type="Position2D" parent="."]
position = Vector2( 640, 680 )

[node name="Spawner9" type="Position2D" parent="."]
position = Vector2( 328, 744 )

[node name="Spawner10" type="Position2D" parent="."]
position = Vector2( 960, 744 )

[node name="Spawner11" type="Position2D" parent="."]
position = Vector2( 256, 552 )

[node name="Spawner12" type="Position2D" parent="."]
position = Vector2( 384, 552 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[editable path="Player"]
